Fixed overflow issues

--- a/public/stylesheets/p0.css
+++ b/public/stylesheets/p0.css
@@ -1,11 +1,11 @@
 
 
 body {
-	overflow: hidden;
+	overflow:auto;
 	background-image: url("../media/background-img-blur.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
-	height: 100%;
+	min-height: 990px;
 	width: 100%;
 }
 
